
2010-08-25  Paulo Pizarro <paulo.pizarro@gmail.com>
	* implemented method 'set_hparams' to NuaHandle class.

2010-08-19  Paulo Pizarro <paulo.pizarro@gmail.com>
	* added media states constants on the module 'soa'.
	* fixed attribute_find function on the module 'sdp' to return nil if not found.

2010-08-17  Paulo Pizarro <paulo.pizarro@gmail.com>
	* implemented access to 'rm_predef', 'rm_pt' and 'rm_any' fields of the sdp_rtpmap_t struct.

2010-07-17  Tiago Katcipis <tiagokatcipis@gmail.com>
	* adding sdp_attribute tests.
	* adding tests for the sdp_rtpmap proxy.
	* adding tests to the sdp_attribute_find function.

2010-07-16  Tiago Katcipis <tiagokatcipis@gmail.com>
	* adding the new function sdp_attribute_find

2010-08-12  Paulo Pizarro <paulo.pizarro@gmail.com>
	* calls nua event callbacks in protected mode.
	* calls nta agent message callback in protected mode.
	* calls timer callback in protected mode.
	* created the LUASOFIA_DEBUG environment variable is used to determine the debug logging
	  level. The default level is 3.
	* now logging nua_event_callback
	* renamed luasofia_utils.* to luasofia_log.*

2010-08-05  Paulo Pizarro <paulo.pizarro@gmail.com>
	* implemented function nua_callstate_name on the module 'nua'

2010-08-04  Paulo Pizarro <paulo.pizarro@gmail.com>
	* added more soa tags: SOATAG_DELAYED_OFFER_ENABLE (configure --enable-sofia-devel)

2010-08-03  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.7devel
	* fixed nua_callstate_received constant name

2010-08-03  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.6
	* implemented function status_phrase on the module 'sip'

2010-07-22  Tiago Katcipis <tiagokatcipis@gmail.com>
	* added luarocks support

2010-07-15  Paulo Pizarro <paulo.pizarro@gmail.com>
	* refactory on load module glib, requiring 'sofia.glib' doesn't load the 'sofia.su' module anymore

2010-07-14  Tiago Katcipis <tiagokatcipis@gmail.com>